redirect accesses to index.php/* to 404 error page
git-svn-id: https://svn.rueckgr.at/private/tor/torstatus/trunk@2187 95840bc9-f7e0-4b9f-abbd-54bb5795df2f

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,7 @@
 RewriteEngine On
 
+RewriteRule ^index\.php/ - [R=404]
+
 #RewriteCond %{HTTP_USER_AGENT}		^.*nagios.*$
 #RewriteRule .*				index-nagios.html
 
@@ -10,4 +12,5 @@ SetOutputFilter DEFLATE
 ExpiresActive On
 ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
 FileETag none
+
 
