--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,9 +1,15 @@
-FROM php:8.2-fpm
+FROM php:8.3-fpm
 
 RUN apt-get update
-# TODO
+RUN apt-get -y dist-upgrade
+RUN apt-get -y install monitoring-plugins-basic libmemcached-dev zlib1g-dev libssl-dev libpng-dev
+RUN apt-get -y autoremove
+RUN apt-get -y purge $(dpkg -l | grep '^rc' | awk '{print $2}')
+RUN apt-get clean
 
-RUN apt-get install -y libmemcached-dev zlib1g-dev libssl-dev
 RUN pecl install memcached && docker-php-ext-enable memcached
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
+RUN docker-php-ext-install gd && docker-php-ext-enable gd
+
+COPY torstatus.ini /usr/local/etc/php/conf.d/
 
