--- a/updater/Dockerfile
+++ b/updater/Dockerfile
@@ -1,12 +1,20 @@
 FROM perl:5
 
-RUN cpanm DBI PHP::Serialization
-RUN cpanm LWP::Simple
-RUN cpanm File::Touch
-RUN cpanm Parallel::ForkManager
-RUN cpanm Cache::Memcached
-RUN cpanm Net::IP
-RUN cpanm DBD::MariaDB
+RUN apt-get update
+RUN apt-get -y dist-upgrade
+RUN apt-get -y install monitoring-plugins-basic
+RUN apt-get -y autoremove
+RUN apt-get -y purge $(dpkg -l | grep '^rc' | awk '{print $2}')
+RUN apt-get clean
 
-CMD [ "/opt/torstatus/updater/updater.sh" ]
+RUN cpanm DBI PHP::Serialization LWP::Simple File::Touch Parallel::ForkManager Cache::Memcached Net::IP DBD::MariaDB
+RUN mkdir /opt/torstatus
+
+ADD tns_update.pl /opt/torstatus
+ADD updater.sh /opt/torstatus
+
+RUN addgroup --gid 1026 updater && adduser --disabled-password --ingroup updater --system updater && chown -R updater:updater /opt/torstatus
+USER updater
+
+CMD [ "/opt/torstatus/updater.sh" ]
 
